oqct-app/main/default/objects/Data_Clean__c/Data_Clean__c.object-meta.xml
<CustomObject>
    <description>This object under which all the files with [IDs]* needs to be uploaded. This object has a trigger which initiates the masking/delete process</description>
    <label>Data Clean</label>
    <nameField>
        <displayFormat>DaCl - {000000000}</displayFormat>
        <label>Data Clean Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Clean</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>