oqct-app/main/default/objects/Data_Clean__c/fields/Data_Clean_Parent_Backup_File_Names__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Parent_Backup_File_Names__c</fullName>
    <description>The name of the backup files under which Master object’s record Data Clean record is backed-up</description>
    <inlineHelpText>The name of the backup files under which Master object’s record Data Clean record is backed-up</inlineHelpText>
    <label>Data Clean Parent Backup File Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>