oqct-app/main/default/objects/Data_Clean__c/fields/DC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The ‘DC - Configuration’ to which the Data Clean record is associated with</description>
    <inlineHelpText>The ‘DC - Configuration’ to which the Data Clean record is associated with</inlineHelpText>
    <label>DC-Configuration</label>
    <referenceTo>DC_Configuration__c</referenceTo>
    <relationshipLabel>Data Clean</relationshipLabel>
    <relationshipName>Data_Clean</relationshipName>
    <type>Lookup</type>
</CustomField>