oqct-app/main/default/objects/Data_Clean__c/fields/DC_Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration_Id__c</fullName>
    <description>The DC Configuration Id to used for processing the master and it&apos;s child record</description>
    <inlineHelpText>The DC Configuration Id to used for processing the master and it&apos;s child record</inlineHelpText>
    <label>DC-Configuration Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>