oqct-app/main/default/objects/Data_Clean__c/fields/Disable_Rollback_Button__c.field-meta.xml
<CustomField>
    <fullName>Disable_Rollback_Button__c</fullName>
    <description>If true, the rollback button on Data Cleans will be disabled</description>
    <formula>!AND(
    OR(
        CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Rollback&apos;),
        CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Archive&apos;)
    ),
    OR(
        Total_Master_Success_Masking__c + Total_Related_Success_Masking__c &gt; 0,
        Total_Master_Success_Deletion__c + Total_Related_Success_Deletion__c &gt; 0,
        Total_Master_Success_Archive__c + Total_Related_Success_Archive__c &gt; 0,
        Total_Master_Success_Cloning__c + Total_Related_Success_Cloning__c &gt; 0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, the rollback button on Data Cleans will be disabled</inlineHelpText>
    <label>Disable Rollback Button</label>
    <type>Checkbox</type>
</CustomField>