oqct-app/main/default/objects/Data_Clean__c/fields/Is_Cloning_Completed_1_or_0__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloning_Completed_1_or_0__c</fullName>
    <description>0 if the cloning process for parent record and related child records is ongoing; 1, if it is completed</description>
    <formula>IF(Is_Cloning_Completed__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0 if the cloning process for parent record and related child records is ongoing; 1, if it is completed</inlineHelpText>
    <label>Is Cloning Completed (1 or 0)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>