oqct-app/main/default/objects/Data_Clean__c/fields/Is_Cloning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloning_Completed__c</fullName>
    <description>FALSE if the cloning process for parent record and related child records is not completed or not required; TRUE, if it is completed</description>
    <formula>AND(Is_Parent_Cloning_Completed__c, Total_Related_Cloning_Completion__c = Total_Data_Clean_Related_Results__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FALSE if the cloning process for parent record and related child records is not completed or not required; TRUE, if it is completed</inlineHelpText>
    <label>Is Cloning Completed</label>
    <type>Checkbox</type>
</CustomField>