oqct-app/main/default/objects/Data_Clean__c/fields/Is_Deletion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Deletion_Completed__c</fullName>
    <description>FALSE if the deletion process for parent record and related child records is ongoing; TRUE, if it is completed</description>
    <formula>AND(Is_Parent_Deletion_Completed__c, Total_Related_Deletion_Completion__c = Total_Data_Clean_Related_Results__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FALSE if the deletion process for parent record and related child records is ongoing; TRUE, if it is completed</inlineHelpText>
    <label>Is Deletion Completed</label>
    <type>Checkbox</type>
</CustomField>