oqct-app/main/default/objects/Data_Clean__c/fields/Is_Masking_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Masking_Completed__c</fullName>
    <description>FALSE if the masking process for parent record and related child records is ongoing; TRUE, if it is completed</description>
    <formula>AND(Is_Parent_Masking_Completed__c, Total_Related_Masking_Completion__c =  ( Total_Related_Objects__c -  Total_Related_Objects_Delete__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FALSE if the masking process for parent record and related child records is ongoing; TRUE, if it is completed</inlineHelpText>
    <label>Is Masking Completed</label>
    <type>Checkbox</type>
</CustomField>