oqct-app/main/default/objects/Data_Clean__c/fields/Is_Parent_Cloning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Cloning_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FALSE if the cloning for parent record is not completed or not required; TRUE, if it is completed</description>
    <inlineHelpText>FALSE if the cloning for parent record is not completed or not required; TRUE, if it is completed</inlineHelpText>
    <label>Is Parent Cloning Completed</label>
    <type>Checkbox</type>
</CustomField>