oqct-app/main/default/objects/Data_Clean__c/fields/Is_Parent_Rollback_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Rollback_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FALSE if the rollback process for parent record is ongoing; TRUE, if it is completed</description>
    <inlineHelpText>FALSE if the rollback process for parent record is ongoing; TRUE, if it is completed</inlineHelpText>
    <label>Is Parent Rollback Completed</label>
    <type>Checkbox</type>
</CustomField>