oqct-app/main/default/objects/Data_Clean__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <description>The id which is matched to a field for the Master object. This will be uploaded from the File or Inserted Directly under Data Clean Object that will trigger the entire process</description>
    <inlineHelpText>The id which is matched to a field for the Master object. This will be uploaded from the File or Inserted Directly under Data Clean Object that will trigger the entire process</inlineHelpText>
    <label>Master Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>