oqct-app/main/default/objects/Data_Clean__c/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <description>The name of the object which is to be masked/deleted</description>
    <formula>DC_Configuration__r.Master_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the object which is to be masked/deleted</inlineHelpText>
    <label>Master Object Name</label>
    <type>Text</type>
</CustomField>