oqct-app/main/default/objects/Data_Clean__c/fields/Master_Record_Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Archive_Status__c</fullName>
    <description>The archival status of the Master object’s record corresponding to the Data clean record. This does not include the archival status of the related child records. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</description>
    <inlineHelpText>The archival status of the Master object’s record corresponding to the Data clean record. This does not include the archival status of the related child records. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</inlineHelpText>
    <label>Master Record Archive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Status</valueSetName>
    </valueSet>
</CustomField>