oqct-app/main/default/objects/Data_Clean__c/fields/Master_Record_Delete_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Delete_DateTime__c</fullName>
    <description>The date-time at which the Master object’s record corresponding to the Data Clean record got deleted</description>
    <inlineHelpText>The date-time at which the Master object’s record corresponding to the Data Clean record got deleted</inlineHelpText>
    <label>Master Record Delete DateTime</label>
    <type>DateTime</type>
</CustomField>