oqct-app/main/default/objects/Data_Clean__c/fields/Master_Record_Delete_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Delete_Error_Message__c</fullName>
    <description>The error message occurred (if any) when the batch tries to delete the Master object’s record corresponding to the Data Clean record</description>
    <inlineHelpText>The error message occurred (if any) when the batch tries to delete the Master object’s record corresponding to the Data Clean record</inlineHelpText>
    <label>Master Record Delete Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>