oqct-app/main/default/objects/Data_Clean__c/fields/Master_Record_Delete_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Delete_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates that the deletion of this Master object&apos;s record was skipped in initial batch processing because the same appear as a child object (in Related List). Eg (Account to Account) self relationship</description>
    <inlineHelpText>The checkbox that indicates that the deletion of this Master object&apos;s record was skipped in initial batch processing because the same appear as a child object (in Related List). Eg (Account to Account) self relationship</inlineHelpText>
    <label>Master Record Delete Skipped</label>
    <type>Checkbox</type>
</CustomField>