oqct-app/main/default/objects/Data_Clean__c/fields/Master_Record_Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Rollback_Status__c</fullName>
    <description>The rollback status of the Master object’s record corresponding to the Data Clean record. This does not include the rollback status from associated child records. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</description>
    <inlineHelpText>The rollback status of the Master object’s record corresponding to the Data Clean record. This does not include the rollback status from associated child records. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</inlineHelpText>
    <label>Master Record Rollback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Status</valueSetName>
    </valueSet>
</CustomField>