oqct-app/main/default/objects/Data_Clean__c/fields/Overall_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Deletion_Status__c</fullName>
    <description>The delete status of the Master object’s record corresponding to the Data clean record and all its associated child records combined</description>
    <formula>IF(
    !CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Deletion&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !( Is_Deletion_Completed__c ),
        &apos;Pending&apos;,
        IF(
            OR(TEXT(Master_Record_Deletion_Status__c) = Related_Deletion_Status__c, Related_Deletion_Status__c = &apos;No Records Found&apos;),
            TEXT(Master_Record_Deletion_Status__c),
            &apos;Partial Success&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The delete status of the Master object’s record corresponding to the Data clean record and all its associated child records combined</inlineHelpText>
    <label>Overall Deletion Status</label>
    <type>Text</type>
</CustomField>