oqct-app/main/default/objects/Data_Clean__c/fields/Overall_Masking_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Masking_Status__c</fullName>
    <description>The masking status of the Master object’s record corresponding to the Data clean record and all its associated child records combined</description>
    <formula>IF(
    !CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Masking&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !( Is_Masking_Completed__c ),
        &apos;Pending&apos;,
        IF(
            OR(TEXT(Master_Record_Masking_Status__c) = Related_Masking_Status__c, Related_Masking_Status__c = &apos;No Records Found&apos;),
            TEXT(Master_Record_Masking_Status__c),
            &apos;Partial Success&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The masking status of the Master object’s record corresponding to the Data clean record and all its associated child records combined</inlineHelpText>
    <label>Overall Masking Status</label>
    <type>Text</type>
</CustomField>