oqct-app/main/default/objects/Data_Clean__c/fields/Overall_Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rollback_Status__c</fullName>
    <description>The rollback status of the Master object’s record corresponding to the Data Clean record and all its associated child record combined</description>
    <formula>IF(
    !OR(
        CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Rollback&apos;),
        CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Archive&apos;)
    ),
    &apos;Not Eligible&apos;,
    IF(
        !( Is_Rollback_Completed__c ),
        &apos;Pending&apos;,
        IF(
            OR(TEXT(Master_Record_Rollback_Status__c) = Related_Rollback_Status__c, Related_Rollback_Status__c = &apos;No Records Found&apos;),
            TEXT(Master_Record_Rollback_Status__c),
            &apos;Partial Success&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rollback status of the Master object’s record corresponding to the Data Clean record and all its associated child record combined</inlineHelpText>
    <label>Overall Rollback Status</label>
    <type>Text</type>
</CustomField>