oqct-app/main/default/objects/Data_Clean__c/fields/Related_Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Archive_Status__c</fullName>
    <description>The archival status of the child record associated with the Master object’s record corresponding to the Data Clean record. This does not include the archival status of the Master object’s record itself</description>
    <formula>IF(
    !CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Archive&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !( Total_Related_Archive_Completion__c =  Total_Data_Clean_Related_Results__c ),
        &apos;Pending&apos;,
        IF(
            AND(Total_Related_Success_Archive__c &gt; 0, Total_Related_Failure_Archive__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Total_Related_Success_Archive__c = 0, Total_Related_Failure_Archive__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Total_Related_Success_Archive__c &gt; 0, Total_Related_Failure_Archive__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Total_Related_Success_Archive__c = 0, Total_Related_Failure_Archive__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The archival status of the child record associated with the Master object’s record corresponding to the Data Clean record. This does not include the archival status of the Master object’s record itself</inlineHelpText>
    <label>Related Archive Status</label>
    <type>Text</type>
</CustomField>