oqct-app/main/default/objects/Data_Clean__c/fields/Related_Cloning_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Cloning_Status__c</fullName>
    <description>The cloning status of the child record associated with the Master object’s record corresponding to the Data Clean record. This does not include the cloning status of the Master object’s record itself</description>
    <formula>IF(
    !CONTAINS(TEXT(DC_Configuration__r.Data_Clean_Action__c), &apos;Cloning&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !( Total_Related_Cloning_Completion__c =  Total_Data_Clean_Related_Results__c ),
        &apos;Pending&apos;,
        IF(
            AND(Total_Related_Success_Cloning__c &gt; 0, Total_Related_Failure_Cloning__c = 0),
            &apos;Success&apos;,
            IF(
                OR(Total_Related_Success_Cloning__c = 0, Total_Related_Failure_Cloning__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Total_Related_Success_Cloning__c &gt; 0, Total_Related_Failure_Cloning__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Total_Related_Success_Cloning__c = 0, Total_Related_Failure_Cloning__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The cloning status of the child record associated with the Master object’s record corresponding to the Data Clean record. This does not include the cloning status of the Master object’s record itself</inlineHelpText>
    <label>Related Cloning Status</label>
    <type>Text</type>
</CustomField>